# yameskills

./: .gitignore  CODEX_SKILL_MIGRATION_TASK.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: a10_cover_sheet.yml  dm_email_list.yml  maintenance_report.yml  pdf_seal_stamp.yml  wehago_new_quote.yml
.github/workflows/: a10-cover-sheet.yml  dm-email-list.yml  maintenance-report.yml  pdf-seal-stamp.yml  wehago-new-quote.yml
douzone_quote_bot/: __init__.py  cli.py
douzone_quote_bot/common/: __init__.py  files.py
douzone_quote_bot/purchase_request/: __init__.py  generator.py
samples/: purchase_request.sample.json  purchase_request.sample.yaml
scripts/: build_maintenance_data.py  download_issue_attachment.py  extract_dm_emails.py  generate_wehago_quote.py
skills/a10-cover-sheet/: SKILL.md  TODO.md
skills/a10-cover-sheet/assets/: galji_template.xlsx
skills/a10-cover-sheet/scripts/: generate_cover.py
skills/a10-new-quote/: SKILL.md  TODO.md
skills/a10-new-quote/templates/: a10_cloud_template.xlsx
skills/douzone-dm-emaillist/: SKILL.md  TODO.md
skills/douzone-dm-emaillist/scripts/: build_dm_list.py  build_product_analysis.py
skills/douzone-maintenance-report/: SKILL.md  TODO.md
skills/douzone-maintenance-report/scripts/: generate_report.py
skills/hwp-reader/: SKILL.md  TODO.md
skills/hwp-reader/scripts/: generate_hwpx.py  parse_hwp.py  parse_hwpx.py  read_hwp.py
skills/pdf-seal-stamp/: SKILL.md  TODO.md
skills/purchase-request/: SKILL.md
skills/wehago-new-quote/: SKILL.md  TODO.md
tests/: test_purchase_request.py
(+3 files in other folders)
