[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "douzone-quote-bot"
version = "0.1.0"
description = "Douzone 업무 산출물 자동화 CLI"
requires-python = ">=3.10"
dependencies = [
  "openpyxl",
  "PyYAML",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
